# internal/logic/v1/rbac/types.go
@@ -45,3 +45,11 @@ type UserProfile struct {
 	User      *rbac.User      `json:"user" description:"用户基础信息"`
 	Resources []rbac.Resource `json:"resources" description:"用户可访问的资源列表"`
 }
+
+// UpdateRoleRequest 更新角色
+type UpdateRoleRequest struct {
+	Id          uint   `form:"id" json:"id" binding:"required" example:"1"`
+	Name        string `json:"name,omitempty" example:"管理员"`
+	Description string `json:"description,omitempty" example:"系统管理员"`
+	Resources   []uint `json:"resources,omitempty" description:"角色绑定的资源ID列表"`
+}
