# internal/model/rbac/resource.go
@@ -13,7 +13,8 @@ type Resource struct {
 	Path         string    `gorm:"size:200;not null;uniqueIndex:idx_path_method" json:"path" example:"/api/users" description:"资源路径"`
 	Method       string    `gorm:"size:10;not null;uniqueIndex:idx_path_method" json:"method" example:"GET" description:"HTTP方法"`
 	Description  string    `gorm:"size:200" json:"description" example:"获取用户列表" description:"接口中文描述"`
-	PermissionID *uint     `gorm:"index:idx_resource_permission" json:"permission_id" example:"0" description:"所属权限ID"`
+	PermissionID *uint     `gorm:"index:idx_resource_permission" json:"permission_id" example:"1" description:"所属权限分组ID（仅用于UI展示分组）"`
+	Roles        []Role    `gorm:"many2many:role_resources;" json:"roles" description:"拥有该资源的角色（实际授权）"`
 	CreatedAt    time.Time `json:"created_at" example:"2023-01-01T00:00:00Z" description:"创建时间"`
 	UpdatedAt    time.Time `json:"updated_at" example:"2023-01-01T00:00:00Z" description:"更新时间"`
 }
